; ModuleID = '/home/carl/AnghaBench/linux/fs/extr_super.c_emergency_remount.c'
source_filename = "/home/carl/AnghaBench/linux/fs/extr_super.c_emergency_remount.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.work_struct = type { i32 }

@GFP_ATOMIC = common dso_local global i32 0, align 4
@do_emergency_remount = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @emergency_remount() #0 {
  %1 = alloca %struct.work_struct*, align 8
  %2 = load i32, i32* @GFP_ATOMIC, align 4
  %3 = call %struct.work_struct* @kmalloc(i32 4, i32 %2)
  store %struct.work_struct* %3, %struct.work_struct** %1, align 8
  %4 = load %struct.work_struct*, %struct.work_struct** %1, align 8
  %5 = icmp ne %struct.work_struct* %4, null
  br i1 %5, label %6, label %12

6:                                                ; preds = %0
  %7 = load %struct.work_struct*, %struct.work_struct** %1, align 8
  %8 = load i32, i32* @do_emergency_remount, align 4
  %9 = call i32 @INIT_WORK(%struct.work_struct* %7, i32 %8)
  %10 = load %struct.work_struct*, %struct.work_struct** %1, align 8
  %11 = call i32 @schedule_work(%struct.work_struct* %10)
  br label %12

12:                                               ; preds = %6, %0
  ret void
}

declare dso_local %struct.work_struct* @kmalloc(i32, i32) #1

declare dso_local i32 @INIT_WORK(%struct.work_struct*, i32) #1

declare dso_local i32 @schedule_work(%struct.work_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
